# Emmerce-todoApp

./: README.md
server/: Procfile  db.sqlite3  pyproject.toml  render.yaml  requirements  requirements.txt
server/todoApp/: example.env  settings.py  urls.py
server/todoApp/todoApp/: settings.py
server/todo_api/: example.env  serializers.py  urls.py  views.py
server/todo_api/migrations/: 0001_initial.py
server/todoapi/todoApp/: models.py  serializers.py  urls.py  views.py
server/todoapi/todoApp/migrations/: 0002_todomodel_iscomplete.py
server/todoapi/todoapi/: settings.py  urls.py
server2/todoApp/: pyproject.toml
server2/todoApp/todoapi/: db.sqlite3
server2/todoApp/todoapi/todoApp/: models.py  views.py
server2/todoApp/todoapi/todoApp/migrations/: 0001_initial.py
server2/todoApp/todoapi/todoapi/: settings.py  urls.py
todo-client/: example.env  index.html  package-lock.json  package.json
todo-client/src/: App.tsx  main.tsx  types.d.ts
todo-client/src/api/: api.ts
todo-client/src/components/: AllTodos.tsx  index.ts
todo-client/src/components/Todos/: TodoForm.tsx  TodoItem.tsx
